Test with Java 16